<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.github.stueberm1.riskmanager</groupId>
    <artifactId>riskmanager-parent</artifactId>
    <version>${revision}</version>
    <name>riskmanager-parent</name>
    <packaging>pom</packaging>
    <description>A tool to track and assess risks</description>
    <url>https://github.com/stueberm1/riskmanager</url>
    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>stueberm1</id>
            <name>Michael Stüber</name>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
    </developers>
    <scm>
        <connection>https://github.com/stueberm1/riskmanager.git</connection>
        <developerConnection>git@github.com:stueberm1/riskmanager.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/stueberm1/riskmanager</url>
    </scm>
    <properties>
        <java.version>25</java.version>
        <revision>0.0.1-SNAPSHOT</revision>
        <arch-unit.version>1.4.1</arch-unit.version>
    </properties>
    <modules>
        <module>risk-manager-core</module>
        <module>risk-manager-main</module>
    </modules>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
                        <docletArtifact>
                            <groupId>org.asciidoctor</groupId>
                            <artifactId>asciidoclet</artifactId>
                            <version>2.0.0</version>
                        </docletArtifact>
                        <overview>src/main/java/overview.adoc</overview>
                        <additionalparam>
                            --base-dir ${project.basedir}
                            --attribute "name=${project.name}"
                            --attribute "version=${project.version}"
                        </additionalparam>
                        <additionalJOptions>
                            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
                            </additionalJOption>
                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                            </additionalJOption>
                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                            </additionalJOption>
                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                            </additionalJOption>
                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                            </additionalJOption>
                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                            </additionalJOption>
                            <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
                        </additionalJOptions>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.7.3</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit</artifactId>
                <version>${arch-unit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${arch-unit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
